<resources>
    <string name="app_name">AuthenticatorApp</string>
    <string name="ontime">OnTime</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="create_new_account">Create New Account</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here</string>
    <string name="log_in_to_account">Log in to Account</string>
    <string name="log_in">Log in</string>
    <string name="not_registered_sign_up_here">Not registered? Sign up here</string>
    <string name="welcome_you_are_logged_in">Welcome! You are logged in.</string>
    <string name="logout">Logout</string>
    <string name="book_appointment_page">Book Appointment Page</string>
    <string name="BusinessName" />
    <string name="select_date_and_time">Select Date And Time</string>
    <string name="text">Text</string>
    <string name="appointment_booked">Appointment Booked!</string>
    <string name="done">Done</string>
    <string name="image">Image</string>
</resources>
